--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-
   <title>Tetris</title>
-  
 </head>
 <body>
-  <canvas id="board" width="320" height="640"></canvas>
+  <div id="game-container">
+    <canvas id="board" width="320" height="640"></canvas>
+    <div id="score-container">
+      <div id="score">Score: 0</div>
+      <div id="highest-score">Highest Score: 0</div>
+    </div>
+  </div>
+  <div id="game-over">
+    <h2>Game Over</h2>
+    <button id="restart-button">Restart</button>
+  </div>
   <script src="tetris.js"></script>
-  <div id="score">Score: 0</div>
 </body>
 </html>
